# apps/server/src/main/java/com/skkil/sync/comment/dto/response/GetCommentsResponse.java
@@ -1,10 +1,9 @@
 package com.skkil.sync.comment.dto.response;
 
-import com.skkil.sync.common.util.pagination.dto.response.CursorPaginationResponse;
 import java.time.Instant;
 import java.util.List;
 
-public record GetCommentsResponse(CursorPaginationResponse<Comment> comments) {
+public record GetCommentsResponse(List<Comment> comments) {
 
   public record Comment(
       Long id,
