# docs/api/openapi3.yaml
@@ -255,30 +255,6 @@ paths:
         required: true
         schema:
           type: string
-      - name: first
-        in: query
-        description: Number of items to return from the beginning of the list
-        required: false
-        schema:
-          type: string
-      - name: after
-        in: query
-        description: Cursor after which to return items
-        required: false
-        schema:
-          type: string
-      - name: last
-        in: query
-        description: Number of items to return from the end of the list
-        required: false
-        schema:
-          type: string
-      - name: before
-        in: query
-        description: Cursor before which to return items
-        required: false
-        schema:
-          type: string
       responses:
         "200":
           description: "200"
@@ -288,16 +264,13 @@ paths:
                 $ref: "#/components/schemas/GetCommentsResponse"
               examples:
                 GetComments:
-                  value: "{\"comments\":{\"pageInfo\":{\"size\":1,\"hasNextPage\"\
-                    :false,\"hasPreviousPage\":false,\"startCursor\":\"start-cursor\"\
-                    ,\"endCursor\":\"end-cursor\"},\"nodes\":[{\"cursor\":\"cursor\"\
-                    ,\"content\":{\"id\":1,\"author\":{\"id\":1,\"handle\":\"user-handle\"\
-                    },\"content\":\"Comment content\",\"deleted\":false,\"createdAt\"\
-                    :\"2026-01-01T00:00:00Z\",\"updatedAt\":\"2026-01-01T00:00:00Z\"\
-                    ,\"replies\":[{\"id\":2,\"author\":{\"id\":1,\"handle\":\"user-handle\"\
-                    },\"content\":\"Reply content\",\"deleted\":false,\"createdAt\"\
-                    :\"2026-01-01T00:00:00Z\",\"updatedAt\":\"2026-01-01T00:00:00Z\"\
-                    ,\"replies\":[]}]}}]}}"
+                  value: "{\"comments\":[{\"id\":1,\"author\":{\"id\":1,\"handle\"\
+                    :\"user-handle\"},\"content\":\"Comment content\",\"deleted\"\
+                    :false,\"createdAt\":\"2026-01-01T00:00:00Z\",\"updatedAt\":\"\
+                    2026-01-01T00:00:00Z\",\"replies\":[{\"id\":2,\"author\":{\"id\"\
+                    :1,\"handle\":\"user-handle\"},\"content\":\"Reply content\",\"\
+                    deleted\":false,\"createdAt\":\"2026-01-01T00:00:00Z\",\"updatedAt\"\
+                    :\"2026-01-01T00:00:00Z\",\"replies\":[]}]}]}"
     post:
       tags:
       - comment
@@ -1670,138 +1643,99 @@ components:
           description: Reflection Slug
     GetCommentsResponse:
       title: GetCommentsResponse
+      required:
+      - comments
       type: object
       properties:
         comments:
-          required:
-          - nodes
-          - pageInfo
-          type: object
-          properties:
-            nodes:
-              type: array
-              description: Nodes
-              items:
+          type: array
+          description: Comments
+          items:
+            required:
+            - createdAt
+            - deleted
+            - id
+            - replies
+            - updatedAt
+            type: object
+            properties:
+              createdAt:
+                type: string
+                description: Creation timestamp
+              deleted:
+                type: boolean
+                description: Deleted flag
+              replies:
+                type: array
+                description: Replies
+                items:
+                  required:
+                  - createdAt
+                  - deleted
+                  - id
+                  - replies
+                  - updatedAt
+                  type: object
+                  properties:
+                    createdAt:
+                      type: string
+                      description: Creation timestamp
+                    deleted:
+                      type: boolean
+                      description: Deleted flag
+                    replies:
+                      type: array
+                      description: Nested replies
+                      items:
+                        oneOf:
+                        - type: object
+                        - type: boolean
+                        - type: string
+                        - type: number
+                    author:
+                      required:
+                      - id
+                      type: object
+                      properties:
+                        handle:
+                          type: string
+                          description: Author handle
+                          nullable: true
+                        id:
+                          type: number
+                          description: Author user ID
+                    id:
+                      type: number
+                      description: Reply ID
+                    content:
+                      type: string
+                      description: Reply content
+                      nullable: true
+                    updatedAt:
+                      type: string
+                      description: Update timestamp
+              author:
                 required:
-                - content
-                - cursor
+                - id
                 type: object
                 properties:
-                  cursor:
+                  handle:
                     type: string
-                    description: Node Cursor
-                  content:
-                    required:
-                    - createdAt
-                    - deleted
-                    - id
-                    - replies
-                    - updatedAt
-                    type: object
-                    properties:
-                      createdAt:
-                        type: string
-                        description: Creation timestamp
-                      deleted:
-                        type: boolean
-                        description: Deleted flag
-                      replies:
-                        type: array
-                        description: Replies
-                        items:
-                          required:
-                          - createdAt
-                          - deleted
-                          - id
-                          - replies
-                          - updatedAt
-                          type: object
-                          properties:
-                            createdAt:
-                              type: string
-                              description: Creation timestamp
-                            deleted:
-                              type: boolean
-                              description: Deleted flag
-                            replies:
-                              type: array
-                              description: Nested replies
-                              items:
-                                oneOf:
-                                - type: object
-                                - type: boolean
-                                - type: string
-                                - type: number
-                            author:
-                              required:
-                              - id
-                              type: object
-                              properties:
-                                handle:
-                                  type: string
-                                  description: Author handle
-                                  nullable: true
-                                id:
-                                  type: number
-                                  description: Author user ID
-                            id:
-                              type: number
-                              description: Reply ID
-                            content:
-                              type: string
-                              description: Reply content
-                              nullable: true
-                            updatedAt:
-                              type: string
-                              description: Update timestamp
-                      author:
-                        required:
-                        - id
-                        type: object
-                        properties:
-                          handle:
-                            type: string
-                            description: Author handle
-                            nullable: true
-                          id:
-                            type: number
-                            description: Author user ID
-                      id:
-                        type: number
-                        description: Comment ID
-                      content:
-                        type: string
-                        description: Comment content
-                        nullable: true
-                      updatedAt:
-                        type: string
-                        description: Update timestamp
-                    description: Node Content
-            pageInfo:
-              required:
-              - hasNextPage
-              - hasPreviousPage
-              - size
-              type: object
-              properties:
-                size:
-                  type: number
-                  description: Page Size
-                hasNextPage:
-                  type: boolean
-                  description: Has Next Page
-                hasPreviousPage:
-                  type: boolean
-                  description: Has Previous Page
-                endCursor:
-                  type: string
-                  description: End Cursor
-                  nullable: true
-                startCursor:
-                  type: string
-                  description: Start Cursor
-                  nullable: true
-              description: Page Info
+                    description: Author handle
+                    nullable: true
+                  id:
+                    type: number
+                    description: Author user ID
+              id:
+                type: number
+                description: Comment ID
+              content:
+                type: string
+                description: Comment content
+                nullable: true
+              updatedAt:
+                type: string
+                description: Update timestamp
     GetJobPostingResponse:
       title: GetJobPostingResponse
       required:
